# Django_REST_Framework

./: .gitignore  README.md  main.py  pyproject.toml
crud_functionality/: manage.py
crud_functionality/app/: admin.py  models.py  serializers.py  views.py
crud_functionality/crud_functionality/: asgi.py  settings.py  urls.py  wsgi.py
crud_functionality/referral_system_database/: apps.py  authenticate.py  default.py  models.py  urls.py  views.py
crud_functionality/referral_system_database/creation_models/: location_models.py  master_models.py  medical_models.py
crud_functionality/referral_system_database/serializers/: model_serializers.py
testing/: testing_book.py  testing_referral_system_database.py
